modified navbar arrangements again

--- a/app/templates/partials/navbar.pug
+++ b/app/templates/partials/navbar.pug
@@ -6,7 +6,7 @@ nav#myNav.navbar.navbar-default.navbar-expand-lg.navbar-dark: .container.my-1
         span.navbar-toggler-icon.navbar-light
     .collapse.navbar-collapse#orderNav
         ul.nav.navbar-nav
-            li.nav-item: a.nav-link.active.me-4(href="https://play.google.com/store/apps/details?id=com.kidprof.tenbin") <img src="/images/google-play-white.png" width="25" height="25" alt="" class="me-2"/> Download
+            li.nav-item: a.nav-link.active.me-4(href="https://play.google.com/store/apps/details?id=com.kidprof.tenbin") Download <img src="/images/google-play-white.png" width="22" height="22" alt="" class="ms-2"/>
             li.nav-item: a.nav-link(href="/index.html"  class={'active': currentPage === 'home'}) Home
             //- li.nav-item: a.nav-link(href="/tutorial.html" class={'active': currentPage === 'tutorial'}) How to play?
             //- li.nav-item: a.nav-link(href="/log.html"  class={'active': currentPage === 'log'}) Update Log
